# lib-common

./: .cspell.project-words.txt  .env.base  .env.repo  .gitignore  .terraform_init  .tofu_init  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  compose.yaml  docker-compose-base.yml  docker-compose.yml
.github/workflows/: post_release.yml  rust_ci.yml
.make/: rust.mk
arrow-macros/core/: Cargo.toml  README.md
arrow-macros/core/src/: lib.rs  tests.rs
arrow-macros/derive/: Cargo.toml  README.md
arrow-macros/derive/src/: lib.rs
docs/: conops.md
lib/: Cargo.toml  README.md
lib/src/: lib.rs  logger.rs  time.rs  uuid.rs
lib/src/grpc/: README.md  mod.rs
lib/src/grpc/mock/: README.md  grpc_client.rs  grpc_server.rs  mod.rs
lib/tests/: integration_test.rs  invalid_log4rs.yaml
lib/tests/ui/: .editorconfig  log_macros_args_wrong_type.rs  log_macros_args_wrong_type.stderr  log_macros_no_args.rs  log_macros_no_args.stderr  log_macros_too_many_args.rs  log_macros_too_many_args.stderr
src/: lib.rs  time.rs
tests/: integration_test.rs
