[package]
name    = "lib-common"
version = "0.1.0"
edition = "2021"       # Allowed values are 2015, 2018, 2021
# Rust Editions: https://doc.rust-lang.org/edition-guide/index.html

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-husky = "1"
chrono      = { version = "0.4", features = ["serde"] }
prost-types = "0.11"

[dev-dependencies.cargo-husky]
default-features = false          # Disable features which are enabled by default
features         = ["user-hooks"]
version          = "1"

[lib]
name = "lib_common"
path = "src/lib.rs"
