[workspace]
members  = ["lib", "arrow-macros/core", "arrow-macros/derive"]
resolver = "2"

[workspace.package]
edition      = "2021"
homepage     = "https://www.arrowair.com/docs/documentation/services/intro"
license-file = "LICENSE"
repository   = "https://github.com/Arrow-air/lib-common"

categories = [
  "aerospace::drones",
  "aerospace::protocols",
] # max 5 -- https://crates.io/category_slugs
