[package]
description = "Aetheric Services Common library"
keywords    = ["vtol", "lib", "common"]          # max 5
name        = "lib-common"
version     = "2.0.0"

categories.workspace   = true
edition.workspace      = true
homepage.workspace     = true
license-file.workspace = true
repository.workspace   = true

[dependencies]
arrow-macros-derive = { path = "../arrow-macros/derive" }
cargo-husky         = "1"
chrono              = { version = "0.4", features = ["serde"] }
chrono-tz           = "0.10"
futures             = { version = "0.3", optional = true }
http                = { version = "1.1", optional = true }
hyper               = { version = "1.4", optional = true }
hyper-util          = { version = "0.1", optional = true }
log                 = { version = "0.4" }
log4rs              = "1.3"
prost               = { version = "0.13", optional = true }
prost-wkt-types     = "0.6"
tonic               = { version = "0.12", optional = true, features = ["gzip"] }
tower               = { version = "0.5", optional = true }
trybuild            = "1.0"
uuid                = { version = "1.10", features = ["v4", "serde"] }

[dependencies.tokio]
features = ["macros", "rt-multi-thread", "sync", "fs", "signal", "full"]
version  = "1.40"

[dev-dependencies]
lib-common = { path = ".", features = ["grpc", "grpc_mock"] }
logtest    = "2.0"
spectral   = "0.6"

[dev-dependencies.cargo-husky]
default-features = false          # Disable features which are enabled by default
features         = ["user-hooks"]
version          = "1"

[lib]
name = "lib_common"

[features]
grpc      = ["tonic", "futures", "prost"]
grpc_mock = ["grpc", "tower", "http", "hyper", "hyper-util"]

# https://github.com/xd009642/tarpaulin?tab=readme-ov-file#ignoring-code-in-files
# removes warnings introduced by rust 1.8
# can be removed when the cfg attributes can be replaced with `#[coverage(off)]` (currently only available in nightly)
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
