[package]
description = "Arrow Services Common Proc Macros"
keywords    = ["vtol", "lib", "common", "macro"]  # max 5
name        = "arrow-macros-core"
version     = "0.1.1-develop.3"

categories.workspace   = true
edition.workspace      = true
homepage.workspace     = true
license-file.workspace = true
repository.workspace   = true

[dependencies]
proc-macro-error = "1.0"
proc-macro2      = "1.0"
quote            = "1.0"
syn              = { version = "1.0", features = ["extra-traits", "full", "fold"] }

[dev-dependencies]
colored-diff = "0.2"
