[package]
description = "Arrow Services Common Proc Macros"
keywords    = ["vtol", "lib", "common"]           # max 5
name        = "arrow-macros-derive"
version     = "0.1.1-develop.2"

categories.workspace   = true
edition.workspace      = true
homepage.workspace     = true
license-file.workspace = true
repository.workspace   = true

[dependencies]
arrow-macros-core = { path = "../core" }
proc-macro-error  = "1.0"
proc-macro2       = "1.0"

[lib]
proc-macro = true
