[package]
description = "Aetheric Services Common Proc Macros"
keywords    = ["vtol", "lib", "common"]              # max 5
name        = "arrow-macros-derive"
version     = "2.0.1-develop.0"

categories.workspace   = true
edition.workspace      = true
homepage.workspace     = true
license-file.workspace = true
repository.workspace   = true

[dependencies]
arrow-macros-core = { path = "../core" }
proc-macro-error  = "1.0"
proc-macro2       = "1.0"

[lib]
proc-macro = true

# https://github.com/xd009642/tarpaulin?tab=readme-ov-file#ignoring-code-in-files
# removes warnings introduced by rust 1.8
# can be removed when the cfg attributes can be replaced with `#[coverage(off)]` (currently only available in nightly)
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
